--- a/src/Web/Pages/Account/Manage/_ManageNav.cshtml
+++ b/src/Web/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,7 +1,7 @@
-﻿<ul class="nav nav-pills nav-stacked">
-    <li class="@ManageNavPages.IndexNavClass(ViewContext)"><a asp-page="./Index">Perfil</a></li>
-    <li class="@ManageNavPages.ChangePasswordNavClass(ViewContext)"><a asp-page="./ChangePassword">Password</a></li>
+﻿<ul class="nav nav-pills flex-column">
+    <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" asp-page="./Index">Perfil</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" asp-page="./ChangePassword">Password</a></li>
     @*<li class="@ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)"><a asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>*@
-    <li class="@ManageNavPages.AddressesNavClass(ViewContext)"><a asp-page="./Addresses">Moradas</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.AddressesNavClass(ViewContext)" asp-page="./Addresses">Moradas</a></li>
 </ul>
 
