--- a/src/Web/Pages/Order/Detail.cshtml
+++ b/src/Web/Pages/Order/Detail.cshtml
@@ -1,15 +1,14 @@
 ﻿@page
 @using Web.Extensions;
 @model DetailModel
-@{
-    ViewData["Title"] = "As Minhas Encomendas";
-}
+
 @{
     ViewData["Title"] = "Detalhe da Encomenda";
 }
 
 <div class="esh-orders_detail">
     <div class="container">
+        <h2>@ViewData["Title"] &nbsp; #@Model.OrderDetails.OrderNumber</h2>
         <section class="esh-orders_detail-section">
             <article class="esh-orders_detail-titles row">
                 <section class="esh-orders_detail-title col-3">Nº Encomenda</section>
@@ -19,34 +18,37 @@
             </article>
 
             <article class="esh-orders_detail-items row">
-                <section class="esh-orders_detail-item col-3">@Model.OrderDetails.OrderNumber</section>
-                <section class="esh-orders_detail-item col-3">@Model.OrderDetails.OrderDate</section>
-                <section class="esh-orders_detail-item col-3">$@Model.OrderDetails.Total</section>
+                <section class="esh-orders_detail-item col-3">@Html.DisplayFor(_ => Model.OrderDetails.OrderNumber)</section>
+                <section class="esh-orders_detail-item col-3">@Html.DisplayFor(_ => Model.OrderDetails.OrderDate)</section>
+                <section class="esh-orders_detail-item col-3">€ @Html.DisplayFor(_ => Model.OrderDetails.Total)</section>
                 <section class="esh-orders_detail-title col-3">@Model.OrderDetails.Status</section>
             </article>
         </section>
 
         @*<section class="esh-orders_detail-section">
-                <article class="esh-orders_detail-titles row">
-                    <section class="esh-orders_detail-title col-xs-12">Description</section>
-                </article>
+            <article class="esh-orders_detail-titles row">
+                <section class="esh-orders_detail-title col-xs-12">Description</section>
+            </article>
 
-                <article class="esh-orders_detail-items row">
-                    <section class="esh-orders_detail-item col-xs-12">@Model.Description</section>
-                </article>
-            </section>*@
+            <article class="esh-orders_detail-items row">
+                <section class="esh-orders_detail-item col-xs-12">@Model.Description</section>
+            </article>
+        </section>*@
 
-        <section class="esh-orders_detail-section">
+        <section class="esh-orders_detail-section mt-3">
             <article class="esh-orders_detail-titles row">
                 <section class="esh-orders_detail-title col-12">Morada de Entrega</section>
             </article>
 
             <article class="esh-orders_detail-items row">
+                <section class="esh-orders_detail-item col-12">@Model.OrderDetails.ShippingAddress.Name</section>
+            </article>
+            <article class="esh-orders_detail-items row">
                 <section class="esh-orders_detail-item col-12">@Model.OrderDetails.ShippingAddress.Street</section>
             </article>
 
             <article class="esh-orders_detail-items row">
-                <section class="esh-orders_detail-item col-12">@Model.OrderDetails.ShippingAddress.City</section>
+                <section class="esh-orders_detail-item col-12">@Model.OrderDetails.ShippingAddress.PostalCode - @Model.OrderDetails.ShippingAddress.City</section>
             </article>
 
             <article class="esh-orders_detail-items row">
@@ -54,62 +56,81 @@
             </article>
         </section>
 
-        <section class="esh-orders_detail-section">
+        <section class="esh-orders_detail-section mt-3">
+            <article class="esh-orders_detail-titles row">
+                <section class="esh-orders_detail-title col-12">Morada de Facturação</section>
+            </article>
+            <article class="esh-orders_detail-items row">
+                <section class="esh-orders_detail-item col-12">@Model.OrderDetails.BillingAddress.Name</section>
+            </article>
+            <article class="esh-orders_detail-items row">
+                <section class="esh-orders_detail-item col-12">@Model.OrderDetails.BillingAddress.Street</section>
+            </article>
+
+            <article class="esh-orders_detail-items row">
+                <section class="esh-orders_detail-item col-12">@Model.OrderDetails.BillingAddress.PostalCode - @Model.OrderDetails.BillingAddress.City</section>
+            </article>
+
+            <article class="esh-orders_detail-items row">
+                <section class="esh-orders_detail-item col-12">@Model.OrderDetails.BillingAddress.Country</section>
+            </article>
+        </section>
+
+        <section class="esh-orders_detail-section mt-3">
             <article class="esh-orders_detail-titles row">
                 <section class="esh-orders_detail-title col-12">DETALHE DA ENCOMENDA</section>
             </article>
 
             @for (int i = 0; i < Model.OrderDetails.OrderItems.Count; i++)
-            {
-                var item = Model.OrderDetails.OrderItems[i];
-                <article class="esh-orders_detail-items esh-orders_detail-items--border row">
-                    <section class="esh-orders_detail-item col-sm-4 hidden-md-down">
-                        <img class="esh-orders_detail-image" src="@item.PictureUrl">
-                    </section>
-                    <section class="esh-orders_detail-item esh-orders_detail-item--middle col-4">
-                        @item.ProductName
-                        @if (item.Attributes?.Count > 0)
-                        {
-                            <br />
-                            foreach (var attr in item.Attributes)
-                            {
-                                <span class="dama-basket-label">@(EnumHelper<ApplicationCore.Entities.CatalogAttributeType>.GetDisplayValue(attr.Type)): @attr.AttributeName </span>
-                            }
-
-                        }
-                    </section>
-                    <section class="esh-orders_detail-item esh-orders_detail-item--middle col-1">€ @item.UnitPrice.ToString("N2")</section>
-                    <section class="esh-orders_detail-item esh-orders_detail-item--middle col-1">@item.Units</section>
-                    <section class="esh-orders_detail-item esh-orders_detail-item--middle col-2">€ @Math.Round(item.Units * item.UnitPrice, 2).ToString("N2")</section>
-                </article>
+        {
+            var item = Model.OrderDetails.OrderItems[i];
+            <article class="esh-orders_detail-items esh-orders_detail-items--border row align-items-center">
+                <section class="esh-orders_detail-item col-4 hidden-md-down">
+                    <img class="esh-orders_detail-image" src="@item.PictureUrl" width="300">
+                </section>
+                <section class="esh-orders_detail-item esh-orders_detail-item--middle col-4">
+                    @item.ProductName
+                    @if (item.Attributes?.Count > 0)
+                {
+                    foreach (var attr in item.Attributes)
+                    {
+                        <br />
+                        <span class="dama-basket-label">@(EnumHelper<ApplicationCore.Entities.CatalogAttributeType>.GetDisplayValue(attr.Type)): @attr.AttributeName </span>
+                }
             }
+                </section>
+                <section class="esh-orders_detail-item esh-orders_detail-item--middle col-1">€ @item.UnitPrice.ToString("N2")</section>
+                <section class="esh-orders_detail-item esh-orders_detail-item--middle col-1">@item.Units</section>
+                <section class="esh-orders_detail-item esh-orders_detail-item--middle col-2">€ @Math.Round(item.Units * item.UnitPrice, 2).ToString("N2")</section>
+            </article>
+    }
         </section>
 
         @if (Model.OrderDetails.ShippingCost > 0)
-        {
-            <section class="esh-orders_detail-section esh-orders_detail-section--right">
-                <article class="esh-orders_detail-titles esh-basket-titles--clean row">
-                    <section class="esh-orders_detail-title col-xs-9"></section>
-                    <section class="esh-orders_detail-title col-xs-2">Portes</section>
-                </article>
-
-                <article class="esh-orders_detail-items row">
-                    <section class="esh-orders_detail-item col-xs-9"></section>
-                    <section class="esh-orders_detail-item esh-orders_detail-item--mark col-xs-2">€ @Model.OrderDetails.ShippingCost</section>
-                </article>
-            </section>
-
-        }
-
-        <section class="esh-orders_detail-section esh-orders_detail-section--right">
+    {
+        <section class="esh-orders_detail-section esh-orders_detail-section--right mt-3">
             <article class="esh-orders_detail-titles esh-basket-titles--clean row">
-                <section class="esh-orders_detail-title col-xs-9"></section>
-                <section class="esh-orders_detail-title col-xs-2">TOTAL</section>
+                <section class="esh-orders_detail-title col-9"></section>
+                <section class="esh-orders_detail-title col-2">Portes</section>
             </article>
 
             <article class="esh-orders_detail-items row">
-                <section class="esh-orders_detail-item col-xs-9"></section>
-                <section class="esh-orders_detail-item esh-orders_detail-item--mark col-xs-2">€ @Model.OrderDetails.Total</section>
+                <section class="esh-orders_detail-item col-9"></section>
+                <section class="esh-orders_detail-item esh-orders_detail-item--mark col-2 text-right">€ @Model.OrderDetails.ShippingCost</section>
+            </article>
+        </section>
+
+}
+
+        <section class="esh-orders_detail-section esh-orders_detail-section--right">
+            <article class="esh-orders_detail-titles esh-basket-titles--clean row">
+                <section class="esh-orders_detail-title col-9"></section>
+                <section class="esh-orders_detail-title col-2">TOTAL</section>
+            </article>
+
+            <article class="esh-orders_detail-items row">
+                <section class="esh-orders_detail-item col-9"></section>
+                <section class="esh-orders_detail-item esh-orders_detail-item--mark col-2 text-right">€ @Model.OrderDetails.Total</section>
             </article>
         </section>
     </div>
