--- a/src/Web/Pages/Account/Manage/SetPassword.cshtml
+++ b/src/Web/Pages/Account/Manage/SetPassword.cshtml
@@ -1,15 +1,14 @@
 @page
 @model SetPasswordModel
 @{
-    ViewData["Title"] = "Set password";
+    ViewData["Title"] = "Define password";
     ViewData["ActivePage"] = "ChangePassword";
 }
 
-<h4>Set your password</h4>
+<h4>Define a sua password</h4>
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    Você não tem uma conta username/password neste site. Adicione uma conta local para fazer login. 
 </p>
 <div class="row">
     <div class="col-md-6">
@@ -25,7 +24,7 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Set password</button>
+            <button type="submit" class="btn btn-default">Gravar</button>
         </form>
     </div>
 </div>
