--- a/src/Web/Pages/Account/Manage/_Layout.cshtml
+++ b/src/Web/Pages/Account/Manage/_Layout.cshtml
@@ -2,10 +2,10 @@
     Layout = "/Pages/_Layout.cshtml";
 }
 
-<h2>Manage your account</h2>
+<h2>A minha conta</h2>
 
 <div>
-    <h4>Change your account settings</h4>
+    <h4>Mude as definições da sua conta</h4>
     <hr />
     <div class="row">
         <div class="col-md-3">
