--- a/src/Web/Pages/Account/Manage/ChangePassword.cshtml
+++ b/src/Web/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,7 +1,7 @@
 @page
 @model ChangePasswordModel
 @{
-    ViewData["Title"] = "Change password";
+    ViewData["Title"] = "Mudar password";
 }
 
 <h4>@ViewData["Title"]</h4>
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-md-6">
         <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Input.OldPassword"></label>
                 <input asp-for="Input.OldPassword" class="form-control" />
@@ -25,7 +25,7 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Update password</button>
+            <button type="submit" class="btn btn-default">Atualizar password</button>
         </form>
     </div>
 </div>
