--- a/src/Web/Pages/Basket/Result.cshtml
+++ b/src/Web/Pages/Basket/Result.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Web.Pages.Basket.ResultModel
 @{
-    ViewData["Title"] = "Result";
+    ViewData["Title"] = "Resultado";
 }
 <h2>Sucesso</h2>
 
