--- a/src/Web/Pages/Index.cshtml
+++ b/src/Web/Pages/Index.cshtml
@@ -53,7 +53,7 @@
             @foreach (var catalogItem in Model.CatalogModel.NewCatalogItems)
             {
                 <div class="esh-catalog-item col-md-3">
-                    @Html.Partial("_product", catalogItem)
+                    @await Html.PartialAsync("_product", catalogItem)
                 </div>
             }
         </div>
@@ -73,7 +73,7 @@
             @foreach (var catalogItem in Model.CatalogModel.FeaturedCatalogItems)
             {
                 <div class="esh-catalog-item col-md-3">
-                    @Html.Partial("_product", catalogItem)
+                    @await Html.PartialAsync("_product", catalogItem)
                 </div>
             }
         </div>
