--- a/src/Web/Pages/Account/Manage/Addresses.cshtml
+++ b/src/Web/Pages/Account/Manage/Addresses.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h4>@ViewData["Title"]</h4>
-@Html.Partial("_StatusMessage", Model.StatusMessage)
+@await Html.PartialAsync("_StatusMessage", Model.StatusMessage)
 <div class="row">
     <div class="col-md-6">
         <form method="post">
@@ -67,7 +67,6 @@
                     <span asp-validation-for="UserAddress.InvoiceAddressCountry" class="text-danger"></span>
                 </div>
             </div>
-            <input type="hidden" asp-for="UserAddress.PhoneNumber" />
             <button type="submit" class="btn btn-default">Alterar morada</button>
         </form>
     </div>
