--- a/src/Web/Pages/Account/Manage/SetPassword.cshtml
+++ b/src/Web/Pages/Account/Manage/SetPassword.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h4>Define a sua password</h4>
-@Html.Partial("_StatusMessage", Model.StatusMessage)
+@await Html.PartialAsync("_StatusMessage", Model.StatusMessage)
 <p class="text-info">
     Você não tem uma conta username/password neste site. Adicione uma conta local para fazer login. 
 </p>
