--- a/src/Web/Pages/Category/Type/Index.cshtml
+++ b/src/Web/Pages/Category/Type/Index.cshtml
@@ -16,7 +16,7 @@
         @foreach (var catalogItem in Model.CatalogModel.CatalogItems)
         {
             <div class="esh-catalog-item col-md-3">
-                @Html.Partial("_product", catalogItem)
+                @await Html.PartialAsync("_product", catalogItem)
             </div>
         }
     </div>
