--- a/src/Backoffice/Pages/ProductType/Delete.cshtml
+++ b/src/Backoffice/Pages/ProductType/Delete.cshtml
@@ -33,6 +33,24 @@
         <dt>
             @Html.DisplayNameFor(model => model.ProductTypeModel.PictureUri)
         </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.DeliveryTimeMin)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.DeliveryTimeMin)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.DeliveryTimeMax)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.DeliveryTimeMax)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.DeliveryTimeUnit)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.DeliveryTimeUnit)
+        </dd>
         <dd>
             <img src="@Model.ProductTypeModel.PictureUri" class="img-responsive" />
         </dd>
