--- a/src/Backoffice/Pages/ProductType/Details.cshtml
+++ b/src/Backoffice/Pages/ProductType/Details.cshtml
@@ -30,6 +30,24 @@
             @string.Join(", ", Model.ProductTypeModel.CategoriesName)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.DeliveryTimeMin)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.DeliveryTimeMin)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.DeliveryTimeMax)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.DeliveryTimeMax)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.DeliveryTimeUnit)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.DeliveryTimeUnit)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.ProductTypeModel.PictureUri)
         </dt>
         <dd>
